--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Pinhas Bentura</h1>
-								<p>étudiant en BTS SIO
-									option SLAM (domaine développement) <br>en alternance à l'ORT de Montreuil.</p>
+								<p>étudiant en BTS SIO</p>
 							</div>
 						</div>
 						<nav>
@@ -51,7 +50,7 @@
 							<article id="about">
 								<h2 class="major">à propos de moi</h2>
 								<a class="image main" style="max-width: 100px" href="assets/doc/CV-Pinhas-Bentura.pdf"><h3>Mon cv</h3><img src="images/cv.png" alt="" /></a>
-								<p></p>
+								<p>option SLAM (domaine développement) <br>en alternance à l'ORT de Montreuil.</p>
 							</article>
 
 						<!-- parcours -->
