Ajout de la présentation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Pinhas Bentura</title>
+		<link href="">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa fa-user"></span>
 							<i class="bi bi-file-earmark-person"></i>
 						</div>
 						<div class="content">
@@ -50,7 +51,11 @@
 							<article id="about">
 								<h2 class="major">à propos de moi</h2>
 								<a class="image main" style="max-width: 100px" href="assets/doc/CV-Pinhas-Bentura.pdf"><h3>Mon cv</h3><img src="images/cv.png" alt="" /></a>
-								<p>option SLAM (domaine développement) <br>en alternance à l'ORT de Montreuil.</p>
+								<p>Je m’appelle Pinhas Bentura et je suis étudiant en BTS SIO, option SLAM. Dans le cadre de ma formation en alternance, j’ai eu l’opportunité de mettre en pratique mes compétences au sein de [Nom de l’entreprise ou de l’organisation]. Ce portfolio a pour but de présenter mes réalisations, les compétences acquises et les projets auxquels j’ai participé durant cette période.
+
+									Le BTS SIO m’a permis d’approfondir mes connaissances en développement et en administration des systèmes informatiques, et cette alternance représente une étape clé dans mon parcours professionnel. Vous trouverez dans ce document une synthèse de mes travaux, ainsi que des réflexions sur mon apprentissage.
+
+									Enfin, je structurerai ce portfolio en plusieurs sections, abordant mes projets, mes compétences techniques et mes expériences en entreprise.</p>
 							</article>
 
 						<!-- parcours -->
