Onglet "a propos" complet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>Pinhas Bentura</title>
-		<link href="">
+		<link href="images/pb.png" rel="icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,13 +49,20 @@
 
 						<!-- a propos -->
 							<article id="about">
-								<h2 class="major">à propos de moi</h2>
-								<a class="image main" style="max-width: 100px" href="assets/doc/CV-Pinhas-Bentura.pdf"><h3>Mon cv</h3><img src="images/cv.png" alt="" /></a>
-								<p>Je m’appelle Pinhas Bentura et je suis étudiant en BTS SIO, option SLAM. Dans le cadre de ma formation en alternance, j’ai eu l’opportunité de mettre en pratique mes compétences au sein de [Nom de l’entreprise ou de l’organisation]. Ce portfolio a pour but de présenter mes réalisations, les compétences acquises et les projets auxquels j’ai participé durant cette période.
+								<h2 class="major">à propos de moi <a class="image main" style="max-width: 100px" href="assets/doc/CV-Pinhas-Bentura.pdf"><h3>Mon cv</h3><img src="images/cv.png" alt="" /></a></h2>
 
-									Le BTS SIO m’a permis d’approfondir mes connaissances en développement et en administration des systèmes informatiques, et cette alternance représente une étape clé dans mon parcours professionnel. Vous trouverez dans ce document une synthèse de mes travaux, ainsi que des réflexions sur mon apprentissage.
-
-									Enfin, je structurerai ce portfolio en plusieurs sections, abordant mes projets, mes compétences techniques et mes expériences en entreprise.</p>
+								<p>Je m’appelle Pinhas Bentura et je suis étudiant en BTS SIO, option SLAM. <br> Dans le cadre de ma formation en alternance,
+									j’ai eu l’opportunité de mettre en pratique mes compétences au sein du groupe Géraud.
+									<br>
+									Ce portfolio a pour but de présenter mes réalisations, les compétences acquises et les projets auxquels j’ai participé durant cette période.
+								<br><br>
+									Le BTS SIO m’a permis d’approfondir mes connaissances en développement et en administration des systèmes informatiques,
+									et cette alternance représente une étape clé dans mon parcours professionnel.
+								<br>
+									Vous trouverez dans ce document une synthèse de mes travaux, ainsi que des réflexions sur mon apprentissage.
+								<br><br>
+									Enfin, je structurerai ce portfolio en plusieurs sections, abordant mon parcours, mes projets, mes compétences techniques et mes expériences en entreprise.
+								</p>
 							</article>
 
 						<!-- parcours -->
@@ -70,7 +77,6 @@
 								<h2 class="major">Mes projets</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p></p>
-
 							</article>
 
 						<!-- competences -->
