--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="wrapper">
 
     <!-- Header -->
-    <header id="header">
+    <header id="header" style="position: absolute; top: 20%;">
         <div class="logo">
             <span class="icon fa fa-user"></span>
             <i class="bi bi-file-earmark-person"></i>
