--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
+
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="assets/css/timeline.css">
     <noscript>
@@ -41,7 +42,7 @@
                 <li><a href="#competences">Mes compétences</a></li>
                 <li><a href="#entreprise">Mon entreprise</a></li>
                 <li><a href="#projets">Mes projets</a></li>
-                <li><a href="#contact">Contact</a></li>
+<!--                <li><a href="#contact">Contact</a></li>-->
             </ul>
         </nav>
     </header>
@@ -81,32 +82,6 @@
                     <div class="uia-timeline__container">
                         <div class="uia-timeline__line"></div>
                         <div class="uia-timeline__annual-sections">
-                            <span class="uia-timeline__year" aria-hidden="true">2021</span>
-                            <div class="uia-timeline__groups">
-                                <section class="uia-timeline__group" aria-labelledby="timeline-demo-4-heading-1">
-                                    <div class="uia-timeline__point uia-card" data-uia-card-skin="1"
-                                         data-uia-card-mod="1">
-                                        <div class="uia-card__container">
-                                            <div class="uia-card__intro">
-                                                <h3 id="timeline-demo-4-heading-1">
-                                                    Membre d'une association</h3>
-                                                <span class="uia-card__time">
-                                                    Decembre 2020 - Juin 2021
-                                                </span>
-                                            </div>
-                                            <div class="uia-card__body">
-                                                <div class="uia-card__description">
-                                                    <p>Membre actif au sein d'une association dédiée à l'accompagnement
-                                                        d'enfants en situation de handicap. </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </section>
-
-                            </div>
-                        </div>
-                        <div class="uia-timeline__annual-sections">
                             <span class="uia-timeline__year" aria-hidden="true">2022</span>
                             <div class="uia-timeline__groups">
                                 <section class="uia-timeline__group" aria-labelledby="timeline-demo-4-heading-3">
@@ -131,6 +106,30 @@
                             </div>
                         </div>
                         <div class="uia-timeline__annual-sections">
+                            <span class="uia-timeline__year" aria-hidden="true">2023</span>
+                            <div class="uia-timeline__groups">
+                                <section class="uia-timeline__group" aria-labelledby="timeline-demo-4-heading-3">
+                                    <div class="uia-timeline__point uia-card" data-uia-card-skin="1"
+                                         data-uia-card-mod="1">
+                                        <div class="uia-card__container">
+                                            <div class="uia-card__intro">
+                                                <h3>
+                                                    Yéchiva</h3>
+                                                <span class="uia-card__time">
+                                                    Aout 2022 - Aout 2023
+                                                </span>
+                                            </div>
+                                            <div class="uia-card__body">
+                                                <div class="uia-card__description">
+                                                    <p>Année d'étude talmudique à la yéchiva</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </section>
+                            </div>
+                        </div>
+                        <div class="uia-timeline__annual-sections">
                             <span class="uia-timeline__year" aria-hidden="true">2024</span>
                             <div class="uia-timeline__groups">
                                 <section class="uia-timeline__group" aria-labelledby="timeline-demo-4-heading-3">
@@ -138,7 +137,7 @@
                                          data-uia-card-mod="1">
                                         <div class="uia-card__container">
                                             <div class="uia-card__intro">
-                                                <h3>BTS SIO 1ere année</h3>
+                                                <h3>BTS SIO 1ère année</h3>
                                                 <span class="uia-card__time">
                                                     Septembre 2023 - Juillet 2024
                                                 </span>
@@ -186,48 +185,127 @@
 
         <article id="projets">
             <h2 class="major">Mes projets</h2>
-            <span class="image main"></span>
-            <p></p>
+
+            <!-- Académiques Menu -->
+            <div class="project-section">
+                <h3 onclick="toggleProjects('academic-projects')" class="dropdown">Académiques</h3>
+                <div id="academic-projects" class="project-images" style="display: none;">
+                    <img class="image" src="assets/images/veliko.png" alt="Projet académique 1">
+<!--                    <img src="assets/images/" alt="Projet académique 2">-->
+                </div>
+            </div>
+
+            <div class="project-section">
+                <h3 onclick="toggleProjects('personal-projects')" class="dropdown">Personnels</h3>
+                <div id="personal-projects" class="project-images" style="display: none;">
+                    <img class="image" src="assets/images/snake.jpg" alt="Projet personnel 1">
+                    <img src="assets/images/typingSkill.png" alt="Projet personnel 2">
+                    <img src="assets/images/monportfolio.png" alt="Projet personnel 3">
+                </div>
+            </div>
         </article>
+
 
         <article id="competences">
             <h2 class="major">Mes compétences</h2>
-            <a href="assets/doc/competence.xlsx" class="image main"><img src="assets/images/competences.jpg" alt=""></a>
-            <p></p>
+            <div class="skills-cards">
+                <div class="skill-card">
+                    <h3>HTML</h3>
+                    <p>Structure de pages web</p>
+                </div>
+                <div class="skill-card">
+                    <h3>CSS</h3>
+                    <p>Design et animations</p>
+                </div>
+                <div class="skill-card">
+                    <h3>JavaScript</h3>
+                    <p>Fonctionnalités dynamiques</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Symfony</h3>
+                    <p>Framework PHP</p>
+                </div>
+                <div class="skill-card">
+                    <h3>SQL</h3>
+                    <p>Gestion de bases de données</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Docker</h3>
+                    <p>Virtualisation d'applications</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Git</h3>
+                    <p>Gestion de version</p>
+                </div>
+                <div class="skill-card">
+                    <h3>PC Soft Tools</h3>
+                    <p>Outils de développement Windev</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Excel</h3>
+                    <p>Analyse de données</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Java</h3>
+                    <p>Programmation orientée objet</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Python</h3>
+                    <p>Programmation polyvalente</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Django</h3>
+                    <p>Framework Python</p>
+                </div>
+            </div>
         </article>
+
 
         <article id="entreprise">
             <div style="font-family: Arial, sans-serif; line-height: 1.6; margin: 20px;">
                 <h2 class="major">Groupe geraud</h2>
-                <a href="https://groupegeraud.fr/" class="image main"><img src="assets/images/logoGeraud.png"
-                                                                           alt=""></a>
+<!--                <a href="https://groupegeraud.fr/" class="image main"><img src="assets/images/logoGeraud.png"-->
+<!--                                                                           alt=""></a>-->
+                <a href="https://lyceeort-my.sharepoint.com/:p:/g/personal/pinhas_bentura_ortmontreuil_fr1/EUilbrLw105Ms8e5gM2bARQBaRmrwrMxbY7u-ag7Ixl3CQ?e=6hBw98"
+                   class="image"><img src="assets/images/newLogoGeraud.png" alt=""></a>
+                <br><br>
                 <p>Lors de mon alternance chez le Groupe Geraud, j'utilisais les outils PC SOFT (Windev, Webdev et
                     Windev mobile) pour
                     développer des solutions d'analyse de données à partir de requêtes SQL. Mes principales missions
-                    incluaient :</p>
+                    incluaient :</p> <br>
 
                 <ul style="margin-left: 20px; list-style-type: disc;">
-                    <li style="color: white"><strong>Développement SQL :</strong> Concevoir et optimiser des requêtes
-                        SQL pour extraire, filtrer et structurer des données relatives aux régisseurs et aux commerçants
-                        de marchés.
+                    <li style="color: white"><strong>Développement SQL </strong>
+<!--                        Concevoir et optimiser des requêtes-->
+<!--                        SQL pour extraire, filtrer et structurer des données relatives aux régisseurs et aux commerçants-->
+<!--                        de marchés.-->
                     </li>
-                    <li style="color: white"><strong>Création de tableaux :</strong> Utiliser les outils de PC SOFT pour
-                        générer des tableaux interactifs, facilitant l'analyse des indicateurs de performance.
+                    <li style="color: white"><strong>Création de tableaux </strong>
+<!--                        Utiliser les outils de PC SOFT pour-->
+<!--                        générer des tableaux interactifs, facilitant l'analyse des indicateurs de performance.-->
                     </li>
-                    <li style="color: white"><strong>Visualisation de données :</strong> Créer des graphiques dynamiques
-                        à partir des données extraites pour offrir des visualisations claires et pertinentes, permettant
-                        une meilleure prise de décision.
+                    <li style="color: white"><strong>Visualisation de données </strong>
+<!--                        Créer des graphiques dynamiques-->
+<!--                        à partir des données extraites pour offrir des visualisations claires et pertinentes, permettant-->
+<!--                        une meilleure prise de décision.-->
                     </li>
-                    <li style="color: white"><strong>Automatisation :</strong> Collaborer avec les équipes internes pour
-                        comprendre leurs besoins et automatiser la génération de rapports, intégrant des tableaux et des
-                        graphes, directement dans l'environnement PC SOFT.
+                    <li style="color: white"><strong>Automatisation </strong>
+<!--                        Collaborer avec les équipes internes pour-->
+<!--                        comprendre leurs besoins et automatiser la génération de rapports, intégrant des tableaux et des-->
+<!--                        graphes, directement dans l'environnement PC SOFT.-->
                     </li>
                 </ul>
 
-                <p>Cette expérience m'a permis de maîtriser l'intégration de requêtes SQL et la visualisation des
-                    données
-                    avec les outils PC SOFT, tout en contribuant à l'amélioration des processus décisionnels au sein de
-                    l'entreprise.</p>
+<!--                <p>Cette expérience m'a permis de maîtriser l'intégration de requêtes SQL et la visualisation des-->
+<!--                    données-->
+<!--                    avec les outils PC SOFT, tout en contribuant à l'amélioration des processus décisionnels au sein de-->
+<!--                    l'entreprise.</p>-->
+            </div>
+            <div class="project-section">
+                <div id="works-projects" class="project-images">
+                    <img src="assets/images/diagBatonGg.png" alt="Projet entreprise 1">
+                    <img src="assets/images/diagGg.png" alt="Projet entreprise 2">
+                </div>
             </div>
         </article>
 
@@ -270,6 +348,18 @@
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
+<link rel="stylesheet" href="assets/css/competences.css">
+<script>
+    function toggleProjects(sectionId) {
+        let section = document.getElementById(sectionId);
+        if (section.style.display === "none") {
+            section.style.display = "flex";
+        } else {
+            section.style.display = "none";
+        }
+    }
+
+</script>
 
 </body>
 </html>
