Ajout compétences et projets

--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
                 <div id="works-projects" class="project-images">
                     <img src="assets/images/diagBatonGg.png" alt="Projet entreprise 1">
                     <img src="assets/images/diagGg.png" alt="Projet entreprise 2">
+                    <img src="assets/images/TableGg.png" alt="Projet entreprise 3">
+                    <img src="assets/images/backOffGg.png" alt="Projet entreprise 4">
                 </div>
             </div>
         </article>
