Ajout compétences et readme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <head>
     <title>Pinhas Bentura</title>
     <link href="assets/images/pb.png" rel="icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
@@ -52,9 +53,11 @@
 
         <!-- a propos -->
         <article id="about">
-            <h2 class="major">à propos de moi <a class="image main" style="max-width: 100px"
-                                                 href="assets/doc/CV-Pinhas-Bentura.pdf"><h3>Mon cv</h3><img
-                    src="assets/images/cv.png" alt=""/></a></h2>
+            <h2 class="major">à propos de moi</h2>
+            <div class="skill-card" style="cursor: pointer">
+                <a href="assets/doc/CV-Pinhas-Bentura.pdf"><h3><i class="fa-solid fa-id-card"></i>Mon CV</h3></a>
+            </div>
+            <br><br>
 
             <p>Je m’appelle Pinhas Bentura et je suis étudiant en BTS SIO, option SLAM. <br> Dans le cadre de ma
                 formation en alternance,
@@ -222,12 +225,24 @@
                     <p>Fonctionnalités dynamiques</p>
                 </div>
                 <div class="skill-card">
-                    <h3>Symfony</h3>
-                    <p>Framework PHP</p>
+                    <h3>Java</h3>
+                    <p>Programmation orientée objet</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Python</h3>
+                    <p>Programmation polyvalente</p>
                 </div>
                 <div class="skill-card">
                     <h3>SQL</h3>
                     <p>Gestion de bases de données</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Symfony</h3>
+                    <p>Framework PHP</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Django</h3>
+                    <p>Framework Python</p>
                 </div>
                 <div class="skill-card">
                     <h3>Docker</h3>
@@ -242,20 +257,20 @@
                     <p>Outils de développement Windev</p>
                 </div>
                 <div class="skill-card">
-                    <h3>Excel</h3>
-                    <p>Analyse de données</p>
+                    <h3>JetBrains</h3>
+                    <p>IDE</p>
                 </div>
                 <div class="skill-card">
-                    <h3>Java</h3>
-                    <p>Programmation orientée objet</p>
+                    <h3>Bootstrap</h3>
+                    <p>framework CSS</p>
                 </div>
                 <div class="skill-card">
-                    <h3>Python</h3>
-                    <p>Programmation polyvalente</p>
+                    <h3>Tailwind</h3>
+                    <p>framework CSS</p>
                 </div>
                 <div class="skill-card">
-                    <h3>Django</h3>
-                    <p>Framework Python</p>
+                    <h3>Bulma</h3>
+                    <p>framework CSS</p>
                 </div>
             </div>
         </article>
