--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
-
+    <style>
+        #imgGeraud {
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        #imgGeraud:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+        }
+    </style>
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="assets/css/timeline.css">
     <noscript>
@@ -193,8 +201,8 @@
             <div class="project-section">
                 <h3 onclick="toggleProjects('academic-projects')" class="dropdown">Académiques</h3>
                 <div id="academic-projects" class="project-images" style="display: none;">
-                    <img class="image" src="assets/images/veliko.png" alt="Projet académique 1">
-<!--                    <img src="assets/images/" alt="Projet académique 2">-->
+                    <img src="assets/images/veliko.png" alt="Projet académique 1">
+                    <img src="assets/images/mapVeliko.jpg" alt="Projet académique 2">
                 </div>
             </div>
 
@@ -282,7 +290,7 @@
 <!--                <a href="https://groupegeraud.fr/" class="image main"><img src="assets/images/logoGeraud.png"-->
 <!--                                                                           alt=""></a>-->
                 <a href="https://lyceeort-my.sharepoint.com/:p:/g/personal/pinhas_bentura_ortmontreuil_fr1/EUilbrLw105Ms8e5gM2bARQBaRmrwrMxbY7u-ag7Ixl3CQ?e=6hBw98"
-                   class="image"><img src="assets/images/newLogoGeraud.png" alt=""></a>
+                   class="image" id="imgGeraud"><img src="assets/images/newLogoGeraud.png" alt=""></a>
                 <br><br>
                 <p>Lors de mon alternance chez le Groupe Geraud, j'utilisais les outils PC SOFT (Windev, Webdev et
                     Windev mobile) pour
@@ -365,7 +373,7 @@
 <script src="assets/js/breakpoints.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-<link rel="stylesheet" href="assets/css/competences.css">
+<link rel="stylesheet" href="assets/css/cards.css">
 <script>
     function toggleProjects(sectionId) {
         let section = document.getElementById(sectionId);
