correction fautes d'orthographe

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         }
     </style>
-    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="assets/css/timeline.css">
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
@@ -36,12 +35,12 @@
         <div class="content">
             <div class="inner">
                 <h1>Pinhas Bentura</h1>
-                <p>étudiant en BTS SIO</p>
+                <p>Étudiant en BTS SIO</p>
             </div>
         </div>
         <nav>
             <ul>
-                <li><a href="#about">à propos</a></li>
+                <li><a href="#about">À propos</a></li>
                 <li><a href="#parcours">Mon parcours</a></li>
                 <li><a href="#competences">Mes compétences</a></li>
                 <li><a href="#entreprise">Mon entreprise</a></li>
@@ -96,14 +95,14 @@
                                         <div class="uia-card__container">
                                             <div class="uia-card__intro">
                                                 <h3 id="timeline-demo-4-heading-3">
-                                                    Baccalaureat</h3>
+                                                    Baccalauréat</h3>
                                                 <span class="uia-card__time">
                                                     Juin 2022
                                                 </span>
                                             </div>
                                             <div class="uia-card__body">
                                                 <div class="uia-card__description">
-                                                    <p>Obtention de mon baccalaureat spécialités SES Math et HGGSP</p>
+                                                    <p>Obtention de mon baccalauréat spécialités SES Math et HGGSP</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -143,9 +142,9 @@
                                          data-uia-card-mod="1">
                                         <div class="uia-card__container">
                                             <div class="uia-card__intro">
-                                                <h3>BTS SIO 1ère année</h3>
+                                                <h3>BTS SIO 1ʳᵉ année</h3>
                                                 <span class="uia-card__time">
-                                                    Septembre 2023 - Juillet 2024
+                                                    Septembre 2023 - juillet 2024
                                                 </span>
                                             </div>
                                             <div class="uia-card__body">
@@ -167,9 +166,9 @@
                                          data-uia-card-mod="1">
                                         <div class="uia-card__container">
                                             <div class="uia-card__intro">
-                                                <h3>BTS SIO 2eme année</h3>
+                                                <h3>BTS SIO 2ᵉ année</h3>
                                                 <span class="uia-card__time">
-                                                    Septembre 2024 - Juillet 2025
+                                                    Septembre 2024 - juillet 2025
                                                 </span>
                                             </div>
                                             <div class="uia-card__body">
@@ -192,7 +191,6 @@
         <article id="projets">
             <h2 class="major">Mes projets</h2>
 
-            <!-- Académiques Menu -->
             <div class="project-section">
                 <h3 onclick="toggleProjects('academic-projects')" class="dropdown">Académiques</h3>
                 <div id="academic-projects" class="project-images" style="display: none;">
