--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
         <article id="competences">
-            <h2 class="major">Mes compétences</h2>
+            <a href="assets/doc/tabSynthese.xlsx"><h2 class="major">Mes compétences</h2></a>
             <div class="skills-cards">
                 <div class="skill-card">
                     <h3>HTML</h3>
@@ -282,7 +282,7 @@
                 <h2 class="major">Groupe geraud</h2>
 <!--                <a href="https://groupegeraud.fr/" class="image main"><img src="assets/images/logoGeraud.png"-->
 <!--                                                                           alt=""></a>-->
-                <a href="https://lyceeort-my.sharepoint.com/:p:/g/personal/pinhas_bentura_ortmontreuil_fr1/EUilbrLw105Ms8e5gM2bARQBaRmrwrMxbY7u-ag7Ixl3CQ?e=6hBw98"
+                <a href="https://lyceeort-my.sharepoint.com/:p:/g/personal/pinhas_bentura_ortmontreuil_fr1/EUilbrLw105Ms8e5gM2bARQB9kFmg__uG_Wogkbo7xjRAg?e=sKMwcQ"
                    class="image" id="imgGeraud"><img src="assets/images/newLogoGeraud.png" alt=""></a>
                 <br><br>
                 <p>Lors de mon alternance chez le Groupe Geraud, j'utilisais les outils PC SOFT (Windev, Webdev et
