ajout de projets académiques

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
                 <div id="academic-projects" class="project-images" style="display: none;">
                     <img src="assets/images/veliko.png" alt="Projet académique 1">
                     <img src="assets/images/mapVeliko.jpg" alt="Projet académique 2">
+                    <img src="assets/images/TP8Amigo.png" alt="Projet académique 3">
+                    <img src="assets/images/TPMemory.png" alt="Projet académique 4">
+                    <img src="assets/images/courses.png" alt="Projet académique 5">
                 </div>
             </div>
 
