--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
                 <div id="academic-projects" class="project-images" style="display: none;">
                     <img src="assets/images/veliko.png" alt="Projet académique 1">
                     <img src="assets/images/mapVeliko.jpg" alt="Projet académique 2">
+                    <img src="assets/images/velikoJavaTab.png" alt="Projet académique 6">
+                    <img src="assets/images/velikoJavaMap.png" alt="Projet académique 7">
                     <img src="assets/images/TP8Amigo.png" alt="Projet académique 3">
                     <img src="assets/images/TPMemory.png" alt="Projet académique 4">
                     <img src="assets/images/courses.png" alt="Projet académique 5">
@@ -251,6 +253,10 @@
                 <div class="skill-card">
                     <h3>Django</h3>
                     <p>Framework Python</p>
+                </div>
+                <div class="skill-card">
+                    <h3>Node JS Express</h3>
+                    <p>Framework JS</p>
                 </div>
                 <div class="skill-card">
                     <h3>Docker</h3>
